@@ -6,10 +6,8 @@
   <li><a class="npg_menu" href="/cgi-perl/npg/instrument/">Instruments</a></li>
   <li><a class="npg_menu" href="/cgi-perl/npg/usage/">Disk Usage</a></li>
   <li><a class="npg_menu" href="/cgi-perl/npg/run/stuck_runs">Stuck Runs</a></li>
- 
   <li><a class="npg_menu" href="/cgi-perl/npg/administration/">Admin</a></li>
- 
-  <li><a class="npg_menu_highlight" href="/cgi-perl/npg/run/;add">New Run</a></li> <li><a class="npg_menu" href="/cgi-perl/npg_qc">NPG QC Home</a></li>
+  <li><a class="npg_menu_highlight" href="/cgi-perl/npg/run/;add">New Run</a></li>
   <li><a class="npg_menu" href="/cgi-perl/npg/search/">Search</a></li>
 
 
