@@ -5,7 +5,5 @@
   <li><a class="npg_menu" href="/cgi-perl/npg/run/">Runs</a></li>
   <li><a class="npg_menu" href="/cgi-perl/npg/instrument/">Instruments</a></li>
   <li><a class="npg_menu" href="/cgi-perl/npg/usage/">Disk Usage</a></li>
-  <li><a class="npg_menu" href="/cgi-perl/npg_qc">NPG QC Home</a></li>
   <li><a class="npg_menu" href="/cgi-perl/npg/search/">Search</a></li>
-
 
