@@ -2,12 +2,10 @@
     <div><img src="/prodsoft/npg/icons/navigation/logout.gif" alt="Logout button" />Logged in as <a href="/cgi-perl/npg/user/joe_annotator"></a><div>Groups:&nbsp;annotators&nbsp;events</div>
     </div>
 </div>
-
  <li><a class="npg_menu" href="/cgi-perl/npg/run/">Runs</a></li>
  <li><a class="npg_menu" href="/cgi-perl/npg/instrument/">Instruments</a></li>
  <li><a class="npg_menu" href="/cgi-perl/npg/usage/">Disk Usage</a></li>
  <li><a class="npg_menu" href="/cgi-perl/npg/run/stuck_runs">Stuck Runs</a></li>
- <li><a class="npg_menu" href="/cgi-perl/npg_qc">NPG QC Home</a></li>
  <li><a class="npg_menu" href="/cgi-perl/npg/search/">Search</a></li>
 
 
